unpackaged/main/default/objects/Comp_Copy__c/Comp_Copy__c.object-meta.xml
<CustomObject>
    <description>Track Complimentary copies</description>
    <label>Comp Copy</label>
    <nameField>
        <displayFormat>Comp-{0000}</displayFormat>
        <label>Comp Copies Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comp Copies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>