unpackaged/main/default/objects/Comp_Copy__c/fields/Additional_Book_s_Vol__c.field-meta.xml
<CustomField>
    <fullName>Additional_Book_s_Vol__c</fullName>
    <label>Additional Book(s) Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>