unpackaged/main/default/objects/Comp_Copy__c/fields/Additional_Books__c.field-meta.xml
<CustomField>
    <fullName>Additional_Books__c</fullName>
    <label>Additional Book(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Algebra and Trigonometry</fullName>
            </value>
            <value>
                <fullName>American Government</fullName>
            </value>
            <value>
                <fullName>Anatomy &amp; Physiology</fullName>
            </value>
            <value>
                <fullName>AP Bio</fullName>
            </value>
            <value>
                <fullName>AP History</fullName>
            </value>
            <value>
                <fullName>AP Macro Econ</fullName>
            </value>
            <value>
                <fullName>AP Micro Econ</fullName>
            </value>
            <value>
                <fullName>AP Physics</fullName>
            </value>
            <value>
                <fullName>Astronomy</fullName>
            </value>
            <value>
                <fullName>Biology</fullName>
            </value>
            <value>
                <fullName>Business Ethics</fullName>
            </value>
            <value>
                <fullName>Business Statistics</fullName>
            </value>
            <value>
                <fullName>Calculus</fullName>
            </value>
            <value>
                <fullName>Chem: Atoms First</fullName>
            </value>
            <value>
                <fullName>Chemistry</fullName>
            </value>
            <value>
                <fullName>College Algebra</fullName>
            </value>
            <value>
                <fullName>Concepts of Bio (non-majors)</fullName>
            </value>
            <value>
                <fullName>College Physics (Algebra)</fullName>
            </value>
            <value>
                <fullName>Economics</fullName>
            </value>
            <value>
                <fullName>Elementary Algebra</fullName>
            </value>
            <value>
                <fullName>Entrepreneurship</fullName>
            </value>
            <value>
                <fullName>Intermediate Algebra</fullName>
            </value>
            <value>
                <fullName>Introduction to Business</fullName>
            </value>
            <value>
                <fullName>Introduction to Sociology</fullName>
            </value>
            <value>
                <fullName>Introductory Statistics</fullName>
            </value>
            <value>
                <fullName>Macro Econ</fullName>
            </value>
            <value>
                <fullName>Micro Econ</fullName>
            </value>
            <value>
                <fullName>Microbiology</fullName>
            </value>
            <value>
                <fullName>Prealgebra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>