unpackaged/main/default/objects/Comp_Copy__c/fields/Additional_Physical_Comps__c.field-meta.xml
<CustomField>
    <fullName>Additional_Physical_Comps__c</fullName>
    <label>Additional Physical Comps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>