unpackaged/main/default/objects/Comp_Copy__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <label>Book</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Comp Copies</relationshipLabel>
    <relationshipName>Comp_Copies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>