unpackaged/main/default/objects/Comp_Copy__c/fields/Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Book_Name__c</fullName>
    <formula>Book__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Book Name</label>
    <type>Text</type>
</CustomField>