unpackaged/main/default/objects/Comp_Copy__c/fields/Book_Volume__c.field-meta.xml
<CustomField>
    <fullName>Book_Volume__c</fullName>
    <label>Book Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>