unpackaged/main/default/objects/Comp_Copy__c/fields/ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactEmail__c</fullName>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactEmail</label>
    <type>Text</type>
</CustomField>