unpackaged/main/default/objects/Comp_Copy__c/fields/Digital_Comps__c.field-meta.xml
<CustomField>
    <fullName>Digital_Comps__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Digital Comp codes sent</description>
    <inlineHelpText>Digital Comp codes sent</inlineHelpText>
    <label>Digital Comps</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>