unpackaged/main/default/objects/Comp_Copy__c/fields/Do_not_send_email__c.field-meta.xml
<CustomField>
    <fullName>Do_not_send_email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to not send email (to NACS or to Customer)</description>
    <inlineHelpText>Check this to not send email (to NACS or to Customer)</inlineHelpText>
    <label>Do not send email</label>
    <type>Checkbox</type>
</CustomField>