unpackaged/main/default/objects/Comp_Copy__c/fields/iBook_Comp_Code_Additional_Volume__c.field-meta.xml
<CustomField>
    <fullName>iBook_Comp_Code_Additional_Volume__c</fullName>
    <label>iBook Comp Code Additional Volume</label>
    <type>TextArea</type>
</CustomField>