unpackaged/main/default/objects/Comp_Copy__c/fields/iBook_Emails_sent__c.field-meta.xml
<CustomField>
    <fullName>iBook_Emails_sent__c</fullName>
    <description>populate from process. counts emails sent</description>
    <label>iBook Emails sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>