unpackaged/main/default/objects/Comp_Copy__c/fields/iBook_Info_for_Comp_copy_Email__c.field-meta.xml
<CustomField>
    <fullName>iBook_Info_for_Comp_copy_Email__c</fullName>
    <label>iBook Info for Comp copy Email</label>
    <type>TextArea</type>
</CustomField>