unpackaged/main/default/objects/Comp_Copy__c/fields/iBook_Volume_1_Comp_Code__c.field-meta.xml
<CustomField>
    <fullName>iBook_Volume_1_Comp_Code__c</fullName>
    <description>Populated by CS from Apple website. Activates trigger</description>
    <label>iBook Volume 1 Comp Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>