unpackaged/main/default/objects/Comp_Copy__c/fields/iBook_Volume_3_Comp_Code__c.field-meta.xml
<CustomField>
    <fullName>iBook_Volume_3_Comp_Code__c</fullName>
    <label>iBook Volume 3 Comp Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>