unpackaged/main/default/objects/Comp_Copy__c/fields/Info_for_Comp_copy_Email__c.field-meta.xml
<CustomField>
    <fullName>Info_for_Comp_copy_Email__c</fullName>
    <label>Info for Comp copy Email</label>
    <type>TextArea</type>
</CustomField>