unpackaged/main/default/objects/Comp_Copy__c/fields/Physical_Comps__c.field-meta.xml
<CustomField>
    <fullName>Physical_Comps__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of physical books sent</description>
    <inlineHelpText>Number of physical books sent</inlineHelpText>
    <label>Physical Comps</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>