unpackaged/main/default/objects/Comp_Copy__c/fields/Vol_1_Comp_Copy__c.field-meta.xml
<CustomField>
    <fullName>Vol_1_Comp_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vol.1 Comp Copy</label>
    <type>Checkbox</type>
</CustomField>