unpackaged/main/default/objects/Comp_Copy__c/fields/Vol_1_ISBN_13__c.field-meta.xml
<CustomField>
    <fullName>Vol_1_ISBN_13__c</fullName>
    <formula>IF( Vol_1_Comp_Copy__c = TRUE,  Book__r.ISBN_13__c ,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vol 1. ISBN-13</label>
    <type>Text</type>
</CustomField>