unpackaged/main/default/objects/Comp_Copy__c/fields/Vol_2_Comp_Copy__c.field-meta.xml
<CustomField>
    <fullName>Vol_2_Comp_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vol 2 Comp Copy</label>
    <type>Checkbox</type>
</CustomField>