unpackaged/main/default/objects/Comp_Copy__c/fields/Vol_2_ISBN_13__c.field-meta.xml
<CustomField>
    <fullName>Vol_2_ISBN_13__c</fullName>
    <formula>IF( Vol_2_Comp_Copy__c = TRUE, Book__r.Vol_2_ISBN_13__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vol. 2 ISBN-13</label>
    <type>Text</type>
</CustomField>