unpackaged/main/default/objects/Comp_Copy__c/fields/Vol_3_Comp_Code__c.field-meta.xml
<CustomField>
    <fullName>Vol_3_Comp_Code__c</fullName>
    <label>Vol. 3 Comp Code</label>
    <type>TextArea</type>
</CustomField>