unpackaged/main/default/objects/Comp_Copy__c/fields/vol_3_comp_copy__c.field-meta.xml
<CustomField>
    <fullName>vol_3_comp_copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>vol 3 comp copy</label>
    <type>Checkbox</type>
</CustomField>