unpackaged/main/default/objects/Comp_Copy__c/fields/Vol_3_ISBN_13__c.field-meta.xml
<CustomField>
    <fullName>Vol_3_ISBN_13__c</fullName>
    <formula>IF( vol_3_comp_copy__c = TRUE, Book__r.Vol_3_ISBN_13__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vol. 3 ISBN-13</label>
    <type>Text</type>
</CustomField>