unpackaged/main/default/objects/Comp_Copy__c/fields/X1e_ISBN_13__c.field-meta.xml
<CustomField>
    <fullName>X1e_ISBN_13__c</fullName>
    <formula>IF( X1e_physical_comp__c = TRUE, Book__r.ISBN_13__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1e ISBN 13</label>
    <type>Text</type>
</CustomField>