unpackaged/main/default/objects/Comp_Copy__c/fields/X1e_physical_comp__c.field-meta.xml
<CustomField>
    <fullName>X1e_physical_comp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1e physical comp</label>
    <type>Checkbox</type>
</CustomField>