unpackaged/main/default/objects/Comp_Copy__c/fields/X2nd_Edition_Comp_Copy__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Edition_Comp_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2nd Edition Comp Copy</label>
    <type>Checkbox</type>
</CustomField>