unpackaged/main/default/objects/Comp_Copy__c/fields/X2nd_Edition_ISBN_13__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Edition_ISBN_13__c</fullName>
    <formula>IF( X2nd_Edition_Comp_Copy__c = TRUE, Book__r.X2nd_Edition_ISBN_13__c,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2nd Edition ISBN-13</label>
    <type>Text</type>
</CustomField>