unpackaged/main/default/objects/Comp_Copy__c/fields/X3rd_Edition_Comp__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Edition_Comp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3rd Edition Comp Copy</label>
    <type>Checkbox</type>
</CustomField>