unpackaged/main/default/objects/Comp_Copy__c/fields/X3rd_Edition_ISBN_13__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Edition_ISBN_13__c</fullName>
    <formula>IF( X3rd_Edition_Comp__c = TRUE, Book__r.X3rd_Edition_ISBN_13__c,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3rd Edition ISBN-13</label>
    <type>Text</type>
</CustomField>